loadbalancer-securitygroup.tf
# Create Security Group - Application Load Balancer

resource "aws_security_group" "ALB-Magento" {
  name        = "Magento-ALB"
  description = "ALB - Magento Firewall Rules"
  vpc_id      = var.aws_vpc
  ingress {
    description = "Allow Port 80"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Allow Port 443"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "Allow all ip and ports outbound"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "Magento-ALB"
  }
}
